--- a/TodoList/Views/Shared/_Layout.cshtml
+++ b/TodoList/Views/Shared/_Layout.cshtml
@@ -74,7 +74,7 @@ License: You must have a valid license purchased only from themeforest(the above
                         <!-- DOC: Apply "dropdown-dark" class after "dropdown-extended" to change the dropdown styte -->
                         <!-- DOC: Apply "dropdown-hoverable" class after below "dropdown" and remove data-toggle="dropdown" data-hover="dropdown" data-close-others="true" attributes to enable hover dropdown mode -->
                         <!-- DOC: Remove "dropdown-hoverable" and add data-toggle="dropdown" data-hover="dropdown" data-close-others="true" attributes to the below A element with dropdown-toggle class -->
-                        <li class="dropdown dropdown-extended dropdown-notification" id="header_notification_bar">
+                        @*<li class="dropdown dropdown-extended dropdown-notification" id="header_notification_bar">
                             <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="true">
                                 <i class="icon-bell"></i>
                                 <span class="badge badge-default"> 7 </span>
@@ -181,11 +181,11 @@ License: You must have a valid license purchased only from themeforest(the above
                                     </ul>
                                 </li>
                             </ul>
-                        </li>
+                        </li>*@
                         <!-- END NOTIFICATION DROPDOWN -->
                         <!-- BEGIN INBOX DROPDOWN -->
                         <!-- DOC: Apply "dropdown-dark" class after below "dropdown-extended" to change the dropdown styte -->
-                        <li class="dropdown dropdown-extended dropdown-inbox" id="header_inbox_bar">
+                        @*<li class="dropdown dropdown-extended dropdown-inbox" id="header_inbox_bar">
                             <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="true">
                                 <i class="icon-envelope-open"></i>
                                 <span class="badge badge-default"> 4 </span>
@@ -263,11 +263,11 @@ License: You must have a valid license purchased only from themeforest(the above
                                     </ul>
                                 </li>
                             </ul>
-                        </li>
+                        </li>*@
                         <!-- END INBOX DROPDOWN -->
                         <!-- BEGIN TODO DROPDOWN -->
                         <!-- DOC: Apply "dropdown-dark" class after below "dropdown-extended" to change the dropdown styte -->
-                        <li class="dropdown dropdown-extended dropdown-tasks" id="header_task_bar">
+                        @*<li class="dropdown dropdown-extended dropdown-tasks" id="header_task_bar">
                             <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="true">
                                 <i class="icon-calendar"></i>
                                 <span class="badge badge-default"> 3 </span>
@@ -376,7 +376,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                     </ul>
                                 </li>
                             </ul>
-                        </li>
+                        </li>*@
                         <!-- END TODO DROPDOWN -->
                         <!-- BEGIN USER LOGIN DROPDOWN -->
                         <!-- DOC: Apply "dropdown-dark" class after below "dropdown-extended" to change the dropdown styte -->
@@ -466,7 +466,7 @@ License: You must have a valid license purchased only from themeforest(the above
                         </li>
                         <!-- END SIDEBAR TOGGLER BUTTON -->
                         <!-- DOC: To remove the search box from the sidebar you just need to completely remove the below "sidebar-search-wrapper" LI element -->
-                        <li class="sidebar-search-wrapper">
+                        @*<li class="sidebar-search-wrapper">
                             <!-- BEGIN RESPONSIVE QUICK SEARCH FORM -->
                             <!-- DOC: Apply "sidebar-search-bordered" class the below search form to have bordered search box -->
                             <!-- DOC: Apply "sidebar-search-bordered sidebar-search-solid" class the below search form to have bordered & solid search box -->
@@ -484,7 +484,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                 </div>
                             </form>
                             <!-- END RESPONSIVE QUICK SEARCH FORM -->
-                        </li>
+                        </li>*@
                         <li class="nav-item start ">
                             <a href="javascript:;" class="nav-link nav-toggle">
                                 <i class="icon-home"></i>
@@ -498,12 +498,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                         <span class="title">Giriş</span>
                                     </a>
                                 </li>
-                                <li class="nav-item start ">
-                                    <a href="dashboard_2.html" class="nav-link ">
-                                        <i class="icon-globe"></i>
-                                        <span class="title">Siteye Geç</span>
-                                    </a>
-                                </li>
+                              
                             </ul>
                         </li>
                         <li class="heading">
@@ -665,7 +660,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                     </a>
                                 </li>
                                 <li class="nav-item  ">
-                                    <a href="@Url.Action("Create","ApplicationUsers")" class="nav-link ">
+                                    <a href="@Url.Action("Register","Account")" class="nav-link ">
                                         <span class="title">Kullanıcı Ekle</span>
                                     </a>
                                 </li>
@@ -780,7 +775,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                 <span>Page Layouts</span>
                             </li>
                         </ul>
-                        <div class="page-toolbar">
+                        @*<div class="page-toolbar">
                             <div class="btn-group pull-right">
                                 <button type="button" class="btn green btn-sm btn-outline dropdown-toggle" data-toggle="dropdown">
                                     Actions
@@ -810,7 +805,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                     </li>
                                 </ul>
                             </div>
-                        </div>
+                        </div>*@
                     </div>
                     <!-- END PAGE BAR -->
                     @RenderBody()
@@ -1422,9 +1417,9 @@ License: You must have a valid license purchased only from themeforest(the above
         <!-- BEGIN FOOTER -->
         <div class="page-footer">
             <div class="page-footer-inner">
-                2016 &copy; Metronic Theme By
-                <a target="_blank" href="http://keenthemes.com">Keenthemes</a> &nbsp;|&nbsp;
-                <a href="http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes" title="Purchase Metronic just for 27$ and get lifetime updates for free" target="_blank">Purchase Metronic!</a>
+                2017 &copy; Acıbadem Sigorta 
+                <a target="_blank" href="http://keenthemes.com"></a> &nbsp;|&nbsp;
+                <a href="http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes" title="Purchase Metronic just for 27$ and get lifetime updates for free" target="_blank">TodoList</a>
             </div>
             <div class="scroll-to-top">
                 <i class="icon-arrow-up"></i>
@@ -1433,7 +1428,7 @@ License: You must have a valid license purchased only from themeforest(the above
         <!-- END FOOTER -->
     </div>
     <!-- BEGIN QUICK NAV -->
-    <nav class="quick-nav">
+    @*<nav class="quick-nav">
         <a class="quick-nav-trigger" href="#0">
             <span aria-hidden="true"></span>
         </a>
@@ -1464,7 +1459,7 @@ License: You must have a valid license purchased only from themeforest(the above
             </li>
         </ul>
         <span aria-hidden="true" class="quick-nav-bg"></span>
-    </nav>
+    </nav>*@
     <div class="quick-nav-overlay"></div>
     <!-- END QUICK NAV -->
     <!--[if lt IE 9]>
