--- a/TodoList/Views/Shared/_Layout.cshtml
+++ b/TodoList/Views/Shared/_Layout.cshtml
@@ -55,7 +55,7 @@ License: You must have a valid license purchased only from themeforest(the above
                 <!-- BEGIN LOGO -->
                 <div class="page-logo">
                     <a href="index.html">
-                        <img src="~/Content/image/AcıBademLogo.png" alt="logo" class="logo-default" style="width:100px; height:30px;"/>
+                        <img src="~/Content/image/AcıBademLogo.png" alt="logo" class="logo-default" style="width:100px; height:30px; margin-top:10px!important;"/>
                     </a>
                     <div class="menu-toggler sidebar-toggler">
                         <span></span>
