--- a/TodoList/Views/Media/Create.cshtml
+++ b/TodoList/Views/Media/Create.cshtml
@@ -66,7 +66,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Month, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Month, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Month, new { htmlAttributes = new { @class = "form-control", @Value = Model.Year.ToString(DateTime.Now.Month.ToString()) } })
                 @Html.ValidationMessageFor(model => model.Month, "", new { @class = "text-danger" })
             </div>
         </div>
