--- a/TodoList/Views/Home/Index.cshtml
+++ b/TodoList/Views/Home/Index.cshtml
@@ -8,8 +8,96 @@
 </h1>
 <!-- END PAGE TITLE-->
 <!-- END PAGE HEADER-->
-<div class="note note-info">
+@*<div class="note note-info">
     <p> A black page template with a minimal dependency assets to use as a base for any custom page you create </p>
+</div>*@
+
+
+<div class="row">
+    <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+        <a class="dashboard-stat dashboard-stat-v2 blue" href="@Url.Action("Index","Customers")">
+            <div class="visual">
+                <i class="icon-users"></i>
+            </div>
+            <div class="details">
+                <div class="number">
+                    <span data-counter="counterup" data-value="@ViewBag.CustomerCount">0</span>
+                </div>
+                <div class="desc"> Müşteri Sayısı </div>
+            </div>
+        </a>
+    </div>
+    <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+        <a class="dashboard-stat dashboard-stat-v2 red" href="#">
+            <div class="visual">
+                <i class="icon-layers"></i>
+            </div>
+            <div class="details">
+                <div class="number">
+                    <span data-counter="counterup" data-value="0">0</span>
+                </div>
+                <div class="desc"> Yeni İşler</div>
+            </div>
+        </a>
+    </div>
+    <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+        <a class="dashboard-stat dashboard-stat-v2 green" href="#">
+            <div class="visual">
+                <i class="icon-hourglass"></i>
+            </div>
+            <div class="details">
+                <div class="number">
+                    <span data-counter="counterup" data-value="0"></span>
+                </div>
+                <div class="desc"> Bekleyen İşler </div>
+            </div>
+        </a>
+    </div>
+    <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+        <a class="dashboard-stat dashboard-stat-v2 purple" href="#">
+            <div class="visual">
+                <i class="icon-check"></i>
+            </div>
+            <div class="details">
+                <div class="number">
+                    
+                    <span data-counter="counterup" data-value="0"></span>
+                </div>
+                <div class="desc"> Tamamlanan İşler </div>
+            </div>
+        </a>
+    </div>
+</div>
+<div class="col-lg-12 col-xs-12 col-sm-12">
+    <!-- BEGIN PORTLET-->
+    <div class="portlet light bordered">
+        <div class="portlet-title">
+            <div class="caption">
+                <i class="icon-bar-chart font-dark hide"></i>
+                <span class="caption-subject font-dark bold uppercase">Site Visits</span>
+                <span class="caption-helper">weekly stats...</span>
+            </div>
+            <div class="actions">
+                <div class="btn-group btn-group-devided" data-toggle="buttons">
+                    <label class="btn red btn-outline btn-circle btn-sm active">
+                        <input type="radio" name="options" class="toggle" id="option1">New
+                    </label>
+                    <label class="btn red btn-outline btn-circle btn-sm">
+                        <input type="radio" name="options" class="toggle" id="option2">Returning
+                    </label>
+                </div>
+            </div>
+        </div>
+        <div class="portlet-body">
+            <div id="site_statistics_loading">
+                <img src="../assets/global/img/loading.gif" alt="loading" />
+            </div>
+            <div id="site_statistics_content" class="display-none">
+                <div id="site_statistics" class="chart"> </div>
+            </div>
+        </div>
+    </div>
+    <!-- END PORTLET-->
 </div>
 @if (Session["StatusMessage"]!= null)
 {
